syntax = "proto3";

package admin;
option go_package = "./star";

message StarListRequest {
    optional string Keyword = 1;
    int64 Page = 2;
    int64 PageSize = 3;
}

message StarListItem {
  int64 Id = 1;
  string Name = 2;
  string AvatarUrl = 3;
  string Description = 4;
  double Rate = 6;
  int64 RateCount = 7;
  int64 CreatedAt = 8;
}

message StarListResponse {
    repeated StarListItem Stars = 1;
    int64 Total = 2;
}

message StarDetailRequest {
    int64 Id = 1;
}

message StarDetailResponse {
  int64 Id = 1;
  string Name = 2;
  string Description = 3;
  string CoverUrl = 4;
  string AvatarUrl = 5;
  string PosterUrl = 6;
  double Rate = 7;
  int64 RateCount = 8;
  int64 CreatedAt = 9;
}

message UpdateStarReqeust {
    int64 Id = 1;
    optional string Name = 2;
    optional string Description = 3;
    optional string CoverUrl = 4;
    optional string AvatarUrl = 5;
    optional string PosterUrl = 6;
}

message UpdateStarResponse {
    int64 Id = 1;
}

message CreateStarRequest {
    string Name = 1;
    optional string Description = 2;
    string CoverUrl = 3;
    string AvatarUrl = 4;
    string PosterUrl = 5;
}

message CreateStarResponse {
    int64 Id = 1;
}

service Star {
    rpc StarList(StarListRequest) returns (StarListResponse);
    rpc StarDetail(StarDetailRequest) returns (StarDetailResponse);
    rpc UpdateStar(UpdateStarReqeust) returns (UpdateStarResponse);
    rpc CreateStar(CreateStarRequest) returns (CreateStarResponse);
}